# general_trader

./: general_trader.py  pyproject.toml  test.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
