[project]
name = "general-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "itables>=2.4.3",
    "polars>=1.29.0",
    "polars-talib>=0.1.5",
    "pydantic>=2.11.4",
    "trading-helpers",
    "typing>=3.10.0.0",
]

[tool.uv.sources]
trading-helpers = { git = "https://github.com/craftsmandigital/trading_helpers.git", rev = "0.02" }

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
]
